# MinecraftSkin_Raytracer

./: .gitignore  CMakeLists.txt  README.md
scripts/: package.ps1  package.sh  setup.ps1  setup.sh
src/: CMakeLists.txt  main.cpp
src/gui/: camera_controller.cpp  camera_controller.h  main_window.cpp  main_window.h  raster_preview.cpp  raster_preview.h
src/math/: color.h  ray.h  vec3.h
src/output/: image_writer.cpp  image_writer.h
src/raytracer/: intersection.cpp  intersection.h  raytracer.cpp  raytracer.h  shading.cpp  shading.h  tile_renderer.cpp  tile_renderer.h
src/scene/: camera.cpp  mesh.h  mesh_builder.cpp  mesh_builder.h  pose.h  scene.h  triangle.h
src/skin/: image.cpp  image.h  skin_fetcher.cpp  skin_fetcher.h  skin_parser.cpp  skin_parser.h  texture_region.h
tests/: CMakeLists.txt  placeholder_test.cpp  test_camera_controller.cpp  test_camera_controller_props.cpp  test_color.cpp  test_image_texture.cpp  test_image_writer.cpp  test_image_writer_props.cpp  test_intersection.cpp  test_mesh_builder.cpp  test_mesh_builder_props.cpp  test_raytracer.cpp  test_raytracer_props.cpp  test_shading.cpp  test_shading_props.cpp  test_skin_parser.cpp  test_skin_parser_props.cpp  test_tile_renderer.cpp  test_tile_renderer_props.cpp  test_vec3.cpp
